# wifi_zephyr_samples

./: CMakeLists.txt  Kconfig  README.rst  overlay-bt-provision.conf  overlay-http-client.conf  overlay-http-server.conf  overlay-http-tls.conf  prj.conf
boards/: nrf7002dk_nrf5340_cpuapp.conf
net-tools/: http-server.py  https-server.pem  https-server.py
src/common/: message_channel.c
src/modules/http_client/: CMakeLists.txt  ca_certificate.h  http_client.c  http_client.h  http_get.c
src/modules/http_server/: CMakeLists.txt  http_server.c  http_server.h  socket_dumb_http.c
src/modules/network/: CMakeLists.txt  ble_wifi_provisioning.c  network_wifi.c
src/modules/transport/: transport.c
